initial branch commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="create_account">Create account</string>
     <string name="forgot_password">Forgot Password</string>
 
-    <string name="id_label">The ID is</string>
+    <string name="id_label">The ID iss</string>
     <string name="id_value"></string>
     <string name="content_label">The Content is</string>
     <string name="content_value"></string>
