--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="content_value"></string>
     <string name="action_refresh">Refresh</string>
     <string name="tempLongString">Существуют две основные трактовки понятия «текст»: имманентная (расширенная, философски нагруженная) и репрезентативная (более частная). Имманентный подход подразумевает отношение к тексту как к автономной реальности, нацеленность на выявление его внутренней структуры. Репрезентативный — рассмотрение текста как особой формы представления знаний о внешней тексту действительности</string>
-
-
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
